--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ img {
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; ChapterX 2016</p>
                 </div>
             </div>
         </footer>
